# SmartBand

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
app/base/: init.cpp
app/components/: impl.c  prf.h
app/components/battery/: battery.c  battery.h
app/components/bluetooth/: ble.c  ble.h  kt6368a.c  kt6368a.h
app/components/button/: button.c  button.h
app/components/direct/: lsm303.c  lsm303.h
app/components/eeprom/: bl24.c  bl24.h
app/components/flash/: w25q16.c  w25q16.h
app/components/lcd/: st7789.c  st7789.h
app/components/rtc/: rtc.c  rtc.h
app/components/thermometer/: aht21.c  aht21.h
app/components/touch/: cst816.c  cst816.h
app/func/: bluetooth_helper.cpp  bluetooth_helper.hpp  lfs.cpp  lfs.hpp  task.cpp  task.hpp
app/tasks/: bluetooth.cpp  bluetooth.hpp  core.cpp  core.hpp  gui.cpp  gui.hpp  sensor.cpp  sensor.hpp  storage.cpp  storage.hpp
app/ui/: ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
app/ui/components/: ui_comp.c  ui_comp.h  ui_comp_calendar.c  ui_comp_calendar.h  ui_comp_hook.c  ui_comp_hook.h
app/ui/fonts/: ui_font_Font.c  ui_font_FontMontserrat.c
app/ui/func/: ui_timer.c  ui_timer.h  ui_timer_helper.c  ui_timer_helper.h
app/ui/images/: ui_img_alarm_png.c  ui_img_author_png.c  ui_img_band_png.c  ui_img_battery_png.c  ui_img_bluetooth_png.c  ui_img_calendar_png.c  ui_img_director_png.c  ui_img_heartbeat_png.c  ui_img_height_png.c  ui_img_humi_png.c  ui_img_light_png.c  ui_img_lighting_png.c  ui_img_no_disturb_png.c  ui_img_restart_png.c  ui_img_settings_png.c  ui_img_sleep_png.c  ui_img_start_png.c  ui_img_thermometer_png.c  ui_img_time_png.c  (+4 more)
cmake/: toolchain.cmake
mcu/: .mxproject  Makefile  STM32F411.ioc
(+32 files in other folders)
